deploy.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsletter
  namespace: $OKTETO_NS
  annotations:
    # dev.okteto.com/generate-host: "true"
spec:
  rules:
  - host: $OKTETO_FQDN_HCFMAILER
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hcfmailer      
              port: 
                number: 9000

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o okteto/k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: hcfmailer
  name: hcfmailer
spec:
  type: ClusterIP
  ports:
    - name: "3022"
      port: 3022
      targetPort: 3022
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: hcfmailer
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgres
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o okteto/k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: smtpd
  name: smtpd
spec:
  ports:
    - name: "25"
      port: 25
      targetPort: 25
  selector:
    io.kompose.service: smtpd
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o okteto/k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: hcfmailer
  name: hcfmailer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hcfmailer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o okteto/k8s.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/hcf-default: "true"
        io.kompose.service: hcfmailer
    spec:
      containers:
        - env:
            - name: SSH_PUBKEY
              valueFrom:
                secretKeyRef:
                  name: listmonk
                  key: ssh-pubkey
            - name: LISTMONK_app__address
              value: 0.0.0.0:9000
            - name: LISTMONK_app__admin_password
              valueFrom:
                secretKeyRef:
                  name: listmonk
                  key: listmonk-password
            - name: LISTMONK_app__admin_username
              valueFrom:
                secretKeyRef:
                  name: listmonk
                  key: listmonk-user
            - name: LISTMONK_db__database
              valueFrom:
                secretKeyRef:
                  name: postgres
                  key: postgres-db
            - name: LISTMONK_db__host
              value: postgres
            - name: LISTMONK_db__password
              valueFrom:
                secretKeyRef:
                  name: postgres
                  key: postgres-password
            - name: LISTMONK_db__port
              value: "5432"
            - name: LISTMONK_db__ssl_mode
              value: "disable"
            - name: LISTMONK_db__user
              valueFrom:
                secretKeyRef:
                  name: postgres
                  key: postgres-username
            - name: UPDATED                      
              value: "$TIMESTAMP" 
          image: highcanfly/hcfmailer:latest
          name: hcfmailer
          ports:
            - containerPort: 3022
            - containerPort: 9000
          resources:
            limits:
              cpu: 900m
              memory: "536870912"
          volumeMounts:
            - mountPath: /listmonk/uploads
              name: hcfmailing-uploads
            - mountPath: /listmonk/backups
              name: hcfmailing-backups
      volumes:
        - name: hcfmailing-uploads
          persistentVolumeClaim:
            claimName: hcfmailing-uploads
        - name: hcfmailing-backups
          persistentVolumeClaim:
            claimName: hcfmailing-backups
      restartPolicy: Always
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/hcf-default: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DATABASE
              valueFrom:
                secretKeyRef:
                  name: postgres
                  key: postgres-db
            - name: POSTGRESQL_VOLUME_DIR
              value: /bitnami/postgresql
            - name: PGDATA
              value: /bitnami/postgresql/data
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres
                  key: postgres-password
            - name: POSTGRES_USERNAME
              valueFrom:
                secretKeyRef:
                  name: postgres
                  key: postgres-username
            - name: BITNAMI_DEBUG
              value: "true"
          image: bitnami/postgresql:15
          name: postgres
          command: ["/bin/sh","-c"]
          #args: ["sleep infinity"]
          args: ["useradd -u 1000 -g 0 postgres;mkdir -p /opt/bitnami/postgresql/conf; echo \"listen_addresses='*'\" >> /opt/bitnami/postgresql/conf/postgresql.conf ; echo \"host     all             all             0.0.0.0/0               md5\">/opt/bitnami/postgresql/conf/pg_hba.conf;echo \"host     all             all             ::/0               md5\">>/opt/bitnami/postgresql/conf/pg_hba.conf;echo \"local    all             all                                     md5\">>/opt/bitnami/postgre [...]
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 500m
              memory: "536870912"
          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: hcfmailing-pgsql
          securityContext:
            runAsUser: 0
            runAsGroup: 0
      restartPolicy: Always
      volumes:
        - name: hcfmailing-pgsql
          persistentVolumeClaim:
            claimName: hcfmailing-pgsql
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o okteto/k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: smtpd
  name: smtpd
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: smtpd
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o okteto/k8s.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/hcf-default: "true"
        io.kompose.service: smtpd
    spec:
      containers:
        - env:
            - name: ALLOWED_SENDER_DOMAINS
              valueFrom:
                secretKeyRef:
                  name: smtpd
                  key: smtpd-allowed-sender-domains
            - name: DKIM_PRIVATE_KEY
              valueFrom:
                secretKeyRef:
                  name: smtpd
                  key: smtpd-dkim-private-key
            - name: DKIM_SELECTOR
              valueFrom:
                secretKeyRef:
                  name: smtpd
                  key: smtpd-dkim-selector
            - name: CLOUDFLARE_ZONE_ID
              valueFrom:
                secretKeyRef:
                  name: smtpd
                  key: cloudflare-zone-id
            - name: CLOUDFLARE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: smtpd
                  key: cloudflare-api_key
            - name: CLOUDFLARE_DNS_RECORDS
              valueFrom:
                secretKeyRef:
                  name: smtpd
                  key: cloudflare-dns-records
            - name: POSTFIX_HOSTNAME
              valueFrom:
                secretKeyRef:
                  name: smtpd
                  key: postfix-hostname
            - name: POSTFIX_myhostname
              valueFrom:
                secretKeyRef:
                  name: smtpd
                  key: postfix-hostname
            - name: POSTFIX_helo_name
              valueFrom:
                secretKeyRef:
                  name: smtpd
                  key: postfix-hostname
          image: highcanfly/smtp-relay:latest
          name: smtpd
          ports:
            - containerPort: 25
          resources:
            limits:
              cpu: 900m
              memory: "322122547"
          volumeMounts:
            - mountPath: /listmonk/backups
              name: hcfmailing-backups
      volumes:
        - name: hcfmailing-backups
          persistentVolumeClaim:
            claimName: hcfmailing-backups
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o okteto/k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: webssh
  name: webssh
spec:
  type: ClusterIP
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: webssh
status:
  loadBalancer: {}
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o okteto/k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: webssh
  name: webssh
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webssh
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o okteto/k8s.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/hcf-default: "true"
        io.kompose.service: webssh
    spec:
      containers:
        - env:
            - name: LISTMONK_SSH
              value: "3022"
          image: highcanfly/webssh:latest
          name: webssh
          ports:
            - containerPort: 8888
          resources:
            limits:
              cpu: 500m
              memory: "536870912"
      restartPolicy: Always
status: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  namespace: $OKTETO_NS
  annotations:
    # dev.okteto.com/generate-host: "true"
spec:
  rules:
  - host: admin-$OKTETO_NS.cloud.okteto.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webssh      
              port: 
                number: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/hcf-default: "true"
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              valueFrom:
                secretKeyRef:
                  name: pgadmin
                  key: pgadmin-email
            - name: PGADMIN_DEFAULT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: pgadmin
                  key: pgadmin-password
          image: dpage/pgadmin4:latest
          name: pgadmin
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: "214748364"
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin-data
          securityContext:
            runAsUser: 0
            runAsGroup: 0
      restartPolicy: Always
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: $OKTETO_NS
  annotations:
    # dev.okteto.com/generate-host: "true"
spec:
  rules:
  - host: pgadmin-$OKTETO_NS.cloud.okteto.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pgadmin
              port:
                number: 80
